<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:background="@color/white"
    style="@style/ActionBar"
    tools:context=".login">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_margin="20dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/person"
                android:drawableLeft="@drawable/person"
                android:layout_marginTop="20dp"
                android:hint="@string/username"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_userPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:drawableLeft="@drawable/lock"
                android:layout_marginBottom="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textAlignment="center"
                android:textColor="@color/dark"
                android:textColorHint="@color/dark" />
            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/primary"
                android:text="@string/forgot_password"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_submit"
                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/sign_up"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account_sign_up"
                android:textColor="@color/pink"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>



        </LinearLayout>
    </ScrollView>












</LinearLayout>